# Starfarm

./: .bettercodehub.yml  .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Tiphaine.codestyle.json  build_windows.ps1  cpplint.cfg
.circleci/: config.yml
ECS/src/Component/: Component.cpp  Component.hpp  ComponentContainer.cpp  ComponentContainer.hpp  ComponentManager.cpp  ComponentManager.hpp  IComponent.cpp  IComponent.hpp  IComponentContainer.cpp  IComponentContainer.hpp
ECS/src/Entity/: Entity.cpp  Entity.hpp  EntityContainer.cpp  EntityContainer.hpp  EntityManager.cpp  EntityManager.hpp  IEntity.cpp  IEntity.hpp  IEntityContainer.cpp  IEntityContainer.hpp
ECS/src/System/: ISystem.cpp  ISystem.hpp  SimpleSystemManager.cpp  SimpleSystemManager.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp
ECS/src/provided/: Components.hpp  Systems.hpp
ECS/src/provided/Component/: MonoBehaviourComponent.cpp  MonoBehaviourComponent.hpp
ECS/src/provided/System/: BehaviourSystem.cpp  BehaviourSystem.hpp
ECS/src/util/: util.hpp
Starfarm/: .bettercodehub.yml
Starfarm/src/: Game.cpp  Game.hpp  GameTest.cpp  GameTest.hpp  RessourceManager.cpp  RessourceManager.hpp  Window.cpp  Window.hpp  main.cpp  unix_main.cpp  windows_main.cpp
Starfarm/src/Component/: BaseRendererComponent.cpp  BaseRendererComponent.hpp  MonoBehaviourComponent.cpp  MonoBehaviourComponent.hpp  RendererComponent.cpp  RendererComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.cpp  TextComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
Starfarm/src/Entity/: FpsCounter.cpp  FpsCounter.hpp  GameObject.cpp  GameObject.hpp
Starfarm/src/Entity/FPSCounter/: FpsCounter.cpp  FpsCounter.hpp  FpsCounterBehaviour.cpp  FpsCounterBehaviour.hpp
Starfarm/src/Entity/Missile/: Missile.cpp  Missile.hpp  MissileBehaviour.cpp  MissileBehaviour.hpp
Starfarm/src/Entity/Player/: PlayerBehaviour.cpp  PlayerBehaviour.hpp  PlayerEntity.hpp
Starfarm/src/Event/: Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  IEventHandler.cpp  IEventHandler.hpp
Starfarm/src/Player/: PlayerBehaviour.cpp  PlayerBehaviour.hpp  PlayerEntity.hpp
Starfarm/src/System/: BehaviourSystem.cpp  BehaviourSystem.hpp  EventSystem.cpp  EventSystem.hpp  RendererSystem.cpp  RendererSystem.hpp  TransformSystem.cpp  TransformSystem.hpp
bin-gcc64/: Starfarm
bin-visual32/: Starfarm.ilk
bin-visual64/: Starfarm.ilk
lib/: ecs.ilk
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  catch.hpp  main.cpp
